k8s/service.yaml


# Backend service (internal)
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: messenger
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-config"}'
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: LoadBalancer
---
# Database service (headless)
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP 
---
# Frontend service (external)
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
