k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messenger-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: messenger-static-ip-global
    
spec:
  ingressClassName: gce
  rules:
    - host: messenger.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
